--- a/BackendFundamentals-OrganizerApp/views/index.html
+++ b/BackendFundamentals-OrganizerApp/views/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
     <h1>Hola</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate ad nesciunt harum delectus odit cum corrupti adipisci quidem, earum molestiae inventore veritatis? Totam, dicta dolore voluptatem aut labore repellendus corrupti?</p>
     <img src="https://images.unsplash.com/photo-1650969206434-622016de7428?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+    <img src="/static/angiev.jpg" alt="">
 </body>
 </html>
